...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Action, Crime, Thriller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2x-9z-SL2">
                                                <rect key="frame" x="80" y="336" width="165" height="21"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" systemColor="secondaryLabelColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Synopsis" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxI-62-hyB">
                                                <rect key="frame" x="20" y="389" width="79.5" height="25.5"/>
                                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="18"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Lxx-KI-qve">
...
                                                <rect key="frame" x="0.0" y="918" width="414" height="1"/>
                                                <color key="backgroundColor" systemColor="labelColor"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="1" id="uOe-Mg-Tmb"/>
                                                </constraints>
                                            </view>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E5S-Ff-QuZ">
                                                <rect key="frame" x="17" y="927" width="61" height="26"/>
                                                <fontDescription key="fontDescription" name="Poppins-Regular" family="Poppins" pointSize="18"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jEt-WE-Zv3">
...
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="tJd-Z8-Kqt">
                                <rect key="frame" x="8" y="88" width="398" height="32"/>
                                <segments>
                                    <segment title="Now Playing"/>
                                    <segment title="Coming Soon"/>
                                </segments>
                                <color key="selectedSegmentTintColor" name="RedColor"/>
                                <connections>
                                    <action selector="segmentedDidChange:" destination="d7t-8Y-YQQ" eventType="valueChanged" id="pse-n9-vUH"/>
                                </connections>
                            </segmentedControl>
...
